tests/suite/checker/errors/adjust/hidden_arity.kind2
Arity <a> <b> <c> (d: U60) : U60
Arity a b d = d